Cleanup of Flask implementation
Remove intermediate views folder from frontend directory. Also added a .gitignore for future pushes.

--- a/flask/frontend/pages/alpha_gallery.html
+++ b/flask/frontend/pages/alpha_gallery.html
@@ -23,7 +23,7 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-{% include "frontend/views/partials/css_style.html" %}
+{% include "frontend/partials/css_style.html" %}
 
 <!-- HTML -->
 <body>
@@ -34,7 +34,7 @@
          <ul class="list-group bg-dark">
             <li class="list-group-item bg-dark border-0">
                <center>
-                  <h1 id="header">Account: {{ wallet }}</h1>
+                  <h1 id="header">Your NFTs</h1>
                   <hr>
                </center>
             </li>
