--- a/flask/frontend/pages/download.html
+++ b/flask/frontend/pages/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-   {% include "frontend/views/partials/head.html" %}
+   {% include "frontend/partials/head.html" %}
 </head>
 
 <style>
@@ -19,7 +19,7 @@
 
 <body class="container">
    <header>
-      {% include "frontend/views/partials/header.html" %}
+      {% include "frontend/partials/header.html" %}
    </header>
 
    <main>
@@ -29,6 +29,6 @@
    </main>
 
    <footer>
-      {% include "frontend/views/partials/footer.html" %}
+      {% include "frontend/partials/footer.html" %}
    </footer>
 </body>
