--- a/flask/frontend/pages/index.html
+++ b/flask/frontend/pages/index.html
@@ -11,7 +11,7 @@
 </script>
 
 <head>
-   {% include "frontend/views/partials/head.html" %}
+   {% include "frontend/partials/head.html" %}
 </head>
 
 <style>
@@ -29,7 +29,7 @@
 
 <body class="container">
    <header>
-      {% include "frontend/views/partials/header.html" %}
+      {% include "frontend/partials/header.html" %}
    </header>
    <main>
       <center class="jumbotron">
@@ -41,6 +41,6 @@
    </main>
 
    <footer>
-      {% include "frontend/views/partials/footer.html" %}
+      {% include "frontend/partials/footer.html" %}
    </footer>
 </body>
