--- a/flask/frontend/pages/alpha_gallery.html
+++ b/flask/frontend/pages/alpha_gallery.html
@@ -7,14 +7,25 @@
    function update_action() {
       document.getElementById("create-button").action = "/download";
    }
-
-   function add_img(img_url) {
+   let i = 0;
+   function add_img(img_url, id) {
+      if (i < 4){
       $("#create-button").css("display", "inline-block");
       new_img = new Image();
       new_img.classList.add("nft-img");
+      new_img.onclick = function(){
+         console.log("sortof");
+         document.getElementById(id).style.visibility = "visible";
+         new_img.parentNode.removeChild(new_img);
+         i = i-1;
+      }
       new_img.src = img_url;
-      document.getElementById("photo-list").appendChild(new_img);
+      var x = document.getElementById("photo-list").appendChild(new_img);
+      document.getElementById(id).style.visibility = "hidden";
+      i = i+1;
+      }
    }
+
 
    function setup() { }
 
@@ -45,7 +56,7 @@
                         <img class="selection-img"
                              id="{{ i }}"
                              src="{{ search_res.nft_list[i].get_img_url() }}"
-                             onclick="add_img('{{ search_res.nft_list[i].get_img_url() }}')">
+                             onclick="add_img('{{ search_res.nft_list[i].get_img_url() }}', id)">
                      {% endfor %}
                   </center>
             </li>
@@ -54,12 +65,21 @@
       <!-- Gallery -->
       <div id="gallery-container" class="col offset-3">
          <center id="gallery">
-            <div id="photo-list"></div>
+            <br>
+            <br>
+               <div id="photo-list">
+                  <br>
+                  <br>
+                  <br>
+               </div>
+            <br>
             <br>
             <form id="create-button" style="display: none;" onsubmit="update_action()" method="get">
                <input type="submit" class="button" value="Create Gallery">
             </form>
          </center>
+            
+         
       </div>
    </div>
 </div>
